--- a/css/main.css
+++ b/css/main.css
@@ -544,169 +544,209 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.-left-2 {
+  left: -0.5rem;
+}
+
+.-left-2\.5 {
+  left: -0.625rem;
+}
+
+.-right-2 {
+  right: -0.5rem;
+}
+
+.-right-2\.5 {
+  right: -0.625rem;
+}
+
+.bottom-6 {
+  bottom: 1.5rem;
+}
+
+.left-1\/2 {
+  left: 50%;
+}
+
+.top-32 {
+  top: 8rem;
+}
+
+.top-4 {
+  top: 1rem;
+}
+
+.top-44 {
+  top: 11rem;
+}
+
+.top-\[12rem\] {
+  top: 12rem;
+}
+
+.-z-10 {
+  z-index: -10;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.ml-auto {
-  margin-left: auto;
 }
 
 .mt-4 {
   margin-top: 1rem;
 }
 
-.flex {
-  display: flex;
-}
-
 .grid {
   display: grid;
 }
 
-.hidden {
-  display: none;
+.h-14 {
+  height: 3.5rem;
 }
 
-.aspect-square {
-  aspect-ratio: 1 / 1;
+.h-2 {
+  height: 0.5rem;
 }
 
-.h-6 {
-  height: 1.5rem;
+.h-5 {
+  height: 1.25rem;
 }
 
-.w-12 {
-  width: 3rem;
+.h-8 {
+  height: 2rem;
 }
 
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
+.h-\[min\(100\%-2rem\2c 620px\)\] {
+  height: min(100% - 2rem,620px);
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-\[min\(100\%\2c 5rem\)\] {
+  width: min(100%,5rem);
+}
+
+.w-\[min\(100\%-2rem\2c 270px\)\] {
+  width: min(100% - 2rem,270px);
+}
+
+.w-\[min\(100\%-2rem\2c 4rem\)\] {
+  width: min(100% - 2rem,4rem);
 }
 
 .w-full {
   width: 100%;
 }
 
-.min-w-\[6rem\] {
-  min-width: 6rem;
+.max-w-\[700px\] {
+  max-width: 700px;
 }
 
-.max-w-\[7\.25rem\] {
-  max-width: 7.25rem;
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.max-w-screen-md {
-  max-width: 768px;
+.scale-\[1\.005\] {
+  --tw-scale-x: 1.005;
+  --tw-scale-y: 1.005;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.flex-1 {
-  flex: 1 1 0%;
+.scale-\[1\.001\] {
+  --tw-scale-x: 1.001;
+  --tw-scale-y: 1.001;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.flex-col {
-  flex-direction: column;
+.place-items-center {
+  place-items: center;
 }
 
-.flex-wrap {
-  flex-wrap: wrap;
+.overflow-clip {
+  overflow: clip;
 }
 
-.items-center {
-  align-items: center;
+.text-balance {
+  text-wrap: balance;
 }
 
-.items-baseline {
-  align-items: baseline;
+.rounded-\[2rem\] {
+  border-radius: 2rem;
 }
 
-.justify-center {
-  justify-content: center;
+.rounded-\[inherit\] {
+  border-radius: inherit;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-3 {
-  gap: 0.75rem;
-}
-
-.gap-4 {
-  gap: 1rem;
-}
-
-.gap-6 {
-  gap: 1.5rem;
-}
-
-.gap-7 {
-  gap: 1.75rem;
-}
-
-.self-start {
-  align-self: flex-start;
-}
-
-.overflow-x-hidden {
-  overflow-x: hidden;
-}
-
-.rounded {
-  border-radius: 0.25rem;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .rounded-xl {
   border-radius: 0.75rem;
 }
 
-.border-2 {
-  border-width: 2px;
+.rounded-ee-md {
+  border-end-end-radius: 0.375rem;
 }
 
-.border-midBlue {
-  --tw-border-opacity: 1;
-  border-color: rgb(56 130 246 / var(--tw-border-opacity));
+.rounded-se-xl {
+  border-start-end-radius: 0.75rem;
 }
 
-.bg-cyan-500 {
+.bg-\[\#131313\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(6 182 212 / var(--tw-bg-opacity));
+  background-color: rgb(19 19 19 / var(--tw-bg-opacity));
 }
 
-.bg-darkBlue {
+.bg-\[\#3755be\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  background-color: rgb(55 85 190 / var(--tw-bg-opacity));
 }
 
-.bg-dimwhite {
+.bg-\[\#f3f3f3\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+  background-color: rgb(243 243 243 / var(--tw-bg-opacity));
 }
 
-.bg-midBlue {
+.bg-\[\#f4f4f4\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(56 130 246 / var(--tw-bg-opacity));
+  background-color: rgb(244 244 244 / var(--tw-bg-opacity));
 }
 
-.bg-midwhite {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(249 250 248 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-stone-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(120 113 108 / var(--tw-bg-opacity));
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
-.p-1 {
-  padding: 0.25rem;
+.object-center {
+  -o-object-position: center;
+     object-position: center;
 }
 
 .p-4 {
@@ -717,86 +757,30 @@ video {
   padding: 1.5rem;
 }
 
-.p-8 {
-  padding: 2rem;
+.font-graph {
+  font-family: Graphic, system-ui, sans-serif;
 }
 
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
+.text-\[2rem\] {
+  font-size: 2rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.font-semibold {
+  font-weight: 600;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.leading-snug {
+  line-height: 1.375;
 }
 
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.text-right {
-  text-align: right;
-}
-
-.font-sans {
-  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-\[48px\] {
-  font-size: 48px;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.font-bold {
-  font-weight: 700;
-}
-
-.font-light {
-  font-weight: 300;
-}
-
-.leading-\[1\.1\] {
-  line-height: 1.1;
-}
-
-.text-dimwhite {
+.text-\[\#121212\] {
   --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
+  color: rgb(18 18 18 / var(--tw-text-opacity));
 }
 
-.text-midwhite {
+.text-orange-500 {
   --tw-text-opacity: 1;
-  color: rgb(249 250 248 / var(--tw-text-opacity));
+  color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -804,17 +788,34 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.invert {
-  --tw-invert: invert(100%);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.opacity-70 {
+  opacity: 0.7;
 }
 
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+.outline {
+  outline-style: solid;
+}
+
+.outline-4 {
+  outline-width: 4px;
+}
+
+.outline-\[\#131313\] {
+  outline-color: #131313;
+}
+
+.transition-all {
+  transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.duration-200 {
+  transition-duration: 200ms;
+}
+
+.ease-linear {
+  transition-timing-function: linear;
 }
 
 @font-face {
@@ -869,8 +870,13 @@ video {
   font-weight: 600;
 }
 
+html{
+  color-scheme: light dark;
+  font-size: clamp(16px, 1.2vw, 24px);
+}
+
 :root {
-  font-family: "Graphic", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family:  "Boing",  Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -878,85 +884,87 @@ video {
   -moz-osx-font-smoothing: grayscale;
 }
 
-*{
-  /* background:  #b8ff8804 ; */
-}
-
-h1, h2 , h3 ,h4, p{
+h1, h2 , h3 ,h4{
   text-wrap: balance ;
 }
 
-a{
-  position: relative;
+.grid-row-auto{
+  grid-template-rows: auto 1fr auto;
 }
 
-a::before{
-  content: "";
-  height: .12rem;
-  border-radius: 1rem;
-  width: 0%;
-  opacity: 0;
-  position: absolute;
-  bottom: -.4rem;
-  left: 0;
-  transition: 250ms;
-  background: #fff;
-  --tw-bg-opacity: 1;
-  background-color: rgb(103 232 249 / var(--tw-bg-opacity));
+#phone-screen {
+  isolation: isolate;
+  box-shadow: 0 0 0rem .4rem  #3755be, 20px 20px 1rem #a4a4a4 ;
 }
 
-a:hover::before {
-  width: 100%;
-  opacity: 1;
+/* #notch::before{
+    content: '';
+    width: 0;
+    height: 0;
+    background: inherit;
+    position: absolute;
+    top: 0;
+    left: -5%;
+    display: block;
+    border: 1rem solid #181818;
+    border: 1rem solid red;
+    border-radius: 0rem 1rem ;
+    translate: 0 -2%;
+    rotate: -10deg;
+    box-shadow: 0px -2px 0 #181818 ;
+    box-shadow: 0px -1px 0 red ; 
 }
 
-.hover\:text-cyan-300:hover {
-  --tw-text-opacity: 1;
-  color: rgb(103 232 249 / var(--tw-text-opacity));
+#notch::after{
+    content: '';
+    width: 0;
+    height: 0;
+    background: inherit;
+    position: absolute;
+    top: 0;
+    right: -5%;
+    display: block;
+    border: 1rem solid #181818;
+     border: 1rem solid red; 
+    border-radius: 0rem 1rem ;
+    rotate: 10deg;
+    translate: 0 -2%;
+    scale: -1  1;
+    box-shadow: 0px -2px 0 #181818 ;
+    overflow: hidden;
 }
+ */
 
-.hover\:opacity-\[70\]:hover {
-  opacity: 70;
+@media (min-width: 350px) {
+  .sms\:px-\[min\(5rem\2c 32\%\)\] {
+    padding-left: min(5rem,32%);
+    padding-right: min(5rem,32%);
+  }
+
+  .sms\:py-\[min\(20\%\2c 4rem\)\] {
+    padding-top: min(20%,4rem);
+    padding-bottom: min(20%,4rem);
+  }
 }
 
 @media (min-width: 640px) {
-  .sm\:block {
-    display: block;
+  .sm\:px-\[min\(0rem\2c 32\%\)\] {
+    padding-left: min(0rem,32%);
+    padding-right: min(0rem,32%);
   }
 
-  .sm\:flex {
-    display: flex;
+  .sm\:py-\[min\(10\%\2c 41px\)\] {
+    padding-top: min(10%,41px);
+    padding-bottom: min(10%,41px);
   }
 
-  .sm\:hidden {
-    display: none;
+  .sm\:text-\[3rem\] {
+    font-size: 3rem;
   }
+}
 
-  .sm\:flex-row {
-    flex-direction: row;
-  }
-
-  .sm\:items-end {
-    align-items: flex-end;
-  }
-
-  .sm\:justify-center {
-    justify-content: center;
-  }
-
-  .sm\:gap-2 {
-    gap: 0.5rem;
-  }
-
-  .sm\:gap-4 {
-    gap: 1rem;
-  }
-
-  .sm\:p-12 {
-    padding: 3rem;
-  }
-
-  .sm\:text-left {
-    text-align: left;
+@media (min-width: 768px) {
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
