--- a/input.css
+++ b/input.css
@@ -56,9 +56,16 @@ h1, h2 , h3 ,h4{
 	text-wrap: balance ;
 }
 
-h1 {
-    font-size: clamp(1rem, 4vw, 6rem);
+.text-fluid-sm {
+    font-size: clamp(1.3rem, 7vw, 6rem);
 }
+
+.gradient-text {
+    background-image: linear-gradient(to right, #007bff, #28a745);
+    background-clip: text;
+    color: transparent;
+  }
+  
 
 .grid-row-auto{
     grid-template-rows: auto 1fr auto;
